--- a/SolidBlack/SolidBlack.vcxproj
+++ b/SolidBlack/SolidBlack.vcxproj
@@ -19,27 +19,25 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Source\Components\Broadcast.cpp" />
+    <ClCompile Include="Source\Components\Proxy.cpp" />
     <ClCompile Include="Source\LogicLayers\BaseLogicLayer.cpp" />
     <ClCompile Include="Source\LogicLayers\ClientLogicLayer.cpp" />
     <ClCompile Include="Source\LogicLayers\ServerLogicLayer.cpp" />
-    <ClCompile Include="Source\LogicLayers\TestLogicLayer.cpp" />
     <ClCompile Include="Source\Network\Player.cpp" />
-    <ClCompile Include="Source\Systems\BroadcastSystem.cpp" />
+    <ClCompile Include="Source\Systems\ProxySystem.cpp" />
     <ClCompile Include="Source\Systems\DebugCameraSystem.cpp" />
     <ClCompile Include="Source\Systems\RenderingSystem.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Source\Components\Broadcast.h" />
+    <ClInclude Include="Source\Components\Proxy.h" />
     <ClInclude Include="Source\Components\DebugCamera.h" />
     <ClInclude Include="Source\LogicLayers\BaseLogicLayer.h" />
     <ClInclude Include="Source\LogicLayers\ClientLogicLayer.h" />
     <ClInclude Include="Source\LogicLayers\ServerLogicLayer.h" />
-    <ClInclude Include="Source\LogicLayers\TestLogicLayer.h" />
     <ClInclude Include="Source\Network\PacketType.h" />
     <ClInclude Include="Source\Network\Player.h" />
     <ClInclude Include="Source\SolidBlack.h" />
-    <ClInclude Include="Source\Systems\BroadcastSystem.h" />
+    <ClInclude Include="Source\Systems\ProxySystem.h" />
     <ClInclude Include="Source\Systems\DebugCameraSystem.h" />
     <ClInclude Include="Source\Systems\RenderingSystem.h" />
   </ItemGroup>
