--- a/Hect/Tests/UnitTests/UnitTests.vcxproj.filters
+++ b/Hect/Tests/UnitTests/UnitTests.vcxproj.filters
@@ -88,6 +88,9 @@
     <ClInclude Include="Source\DataReaderWriterTests.h">
       <Filter>Source</Filter>
     </ClInclude>
+    <ClInclude Include="Source\SubjectObserverTests.h">
+      <Filter>Source</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Source">
