Renamed Subject/Observer to Dispatcher/Listener.  Added Cubes sample.

--- a/Hect/Hect.vcxproj
+++ b/Hect/Hect.vcxproj
@@ -119,8 +119,8 @@
     <ClInclude Include="Source\Core\Format.h" />
     <ClInclude Include="Source\Core\Logging.h" />
     <ClInclude Include="Source\Core\Memory.h" />
-    <ClInclude Include="Source\Core\Observer.h" />
-    <ClInclude Include="Source\Core\Subject.h" />
+    <ClInclude Include="Source\Core\Listener.h" />
+    <ClInclude Include="Source\Core\Dispatcher.h" />
     <ClInclude Include="Source\Core\TaskPool.h" />
     <ClInclude Include="Source\Core\Timer.h" />
     <ClInclude Include="Source\Core\TimeSpan.h" />
@@ -209,7 +209,7 @@
     <None Include="Source\Asset\AssetHandle.inl" />
     <None Include="Source\Core\Any.inl" />
     <None Include="Source\Core\IdPool.inl" />
-    <None Include="Source\Core\Subject.inl" />
+    <None Include="Source\Core\Dispatcher.inl" />
     <None Include="Source\Entity\ComponentSerializer.inl" />
     <None Include="Source\Entity\Entity.inl" />
     <None Include="Source\Entity\Component.inl" />
