--- a/Hect/Samples/Cubes/Cubes.vcxproj
+++ b/Hect/Samples/Cubes/Cubes.vcxproj
@@ -19,32 +19,31 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{EF7E79E2-8551-4604-AE5E-B513DBBB7201}</ProjectGuid>
-    <RootNamespace>UnitTests</RootNamespace>
-    <ProjectName>UnitTests</ProjectName>
+    <ProjectGuid>{4B31760C-6423-4ECD-9214-4FED4DC7AE9D}</ProjectGuid>
+    <RootNamespace>Cubes</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v110</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v110</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v110</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v110</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
@@ -87,15 +86,10 @@
       <WarningLevel>Level4</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(SolutionDir)Hect\Source\;$(SolutionDir)Hect\Dependencies\UnitTest++\Source\;$(SolutionDir)Hect\Dependencies\VisualLeakDetector\Source\</AdditionalIncludeDirectories>
-      <MultiProcessorCompilation>true</MultiProcessorCompilation>
-      <MinimalRebuild>false</MinimalRebuild>
+      <AdditionalIncludeDirectories>$(ProjectDir)Source\;$(SolutionDir)Hect\Source\;$(SolutionDir)Hect\Samples\Common\Source\</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>vld.lib;Hect.lib;UnitTest++.lib;OpenGL32.lib;glu32.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>$(SolutionDir)Bin\$(Configuration)\$(Platform)\;$(SolutionDir)Hect\Dependencies\VisualLeakDetector\Bin\$(Platform)\</AdditionalLibraryDirectories>
-      <AdditionalOptions>/ignore:4099 %(AdditionalOptions)</AdditionalOptions>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -103,15 +97,10 @@
       <WarningLevel>Level4</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(SolutionDir)Hect\Source\;$(SolutionDir)Hect\Dependencies\UnitTest++\Source\;$(SolutionDir)Hect\Dependencies\VisualLeakDetector\Source\</AdditionalIncludeDirectories>
-      <MultiProcessorCompilation>true</MultiProcessorCompilation>
-      <MinimalRebuild>false</MinimalRebuild>
+      <AdditionalIncludeDirectories>$(ProjectDir)Source\;$(SolutionDir)Hect\Source\;$(SolutionDir)Hect\Samples\Common\Source\</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>vld.lib;Hect.lib;UnitTest++.lib;OpenGL32.lib;glu32.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>$(SolutionDir)Bin\$(Configuration)\$(Platform)\;$(SolutionDir)Hect\Dependencies\VisualLeakDetector\Bin\$(Platform)\</AdditionalLibraryDirectories>
-      <AdditionalOptions>/ignore:4099 %(AdditionalOptions)</AdditionalOptions>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -121,16 +110,12 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(SolutionDir)Hect\Source\;$(SolutionDir)Hect\Dependencies\UnitTest++\Source\;$(SolutionDir)Hect\Dependencies\VisualLeakDetector\Source\</AdditionalIncludeDirectories>
-      <MultiProcessorCompilation>true</MultiProcessorCompilation>
+      <AdditionalIncludeDirectories>$(ProjectDir)Source\;$(SolutionDir)Hect\Source\;$(SolutionDir)Hect\Samples\Common\Source\</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>Hect.lib;UnitTest++.lib;OpenGL32.lib;glu32.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>$(SolutionDir)Bin\$(Configuration)\$(Platform)\;$(SolutionDir)Hect\Dependencies\VisualLeakDetector\Bin\$(Platform)\</AdditionalLibraryDirectories>
-      <AdditionalOptions>/ignore:4099 %(AdditionalOptions)</AdditionalOptions>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -140,52 +125,19 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(SolutionDir)Hect\Source\;$(SolutionDir)Hect\Dependencies\UnitTest++\Source\;$(SolutionDir)Hect\Dependencies\VisualLeakDetector\Source\</AdditionalIncludeDirectories>
-      <MultiProcessorCompilation>true</MultiProcessorCompilation>
+      <AdditionalIncludeDirectories>$(ProjectDir)Source\;$(SolutionDir)Hect\Source\;$(SolutionDir)Hect\Samples\Common\Source\</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>Hect.lib;UnitTest++.lib;OpenGL32.lib;glu32.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>$(SolutionDir)Bin\$(Configuration)\$(Platform)\;$(SolutionDir)Hect\Dependencies\VisualLeakDetector\Bin\$(Platform)\</AdditionalLibraryDirectories>
-      <AdditionalOptions>/ignore:4099 %(AdditionalOptions)</AdditionalOptions>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Source\Main.cpp" />
+    <ClInclude Include="Source\CubesSample.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Source\AngleTests.h" />
-    <ClInclude Include="Source\AnyTests.h" />
-    <ClInclude Include="Source\AssetCacheTests.h" />
-    <ClInclude Include="Source\DataReaderWriterTests.h" />
-    <ClInclude Include="Source\EntityTests.h" />
-    <ClInclude Include="Source\MeshReaderTests.h" />
-    <ClInclude Include="Source\SceneTests.h" />
-    <ClInclude Include="Source\FileSystemTests.h" />
-    <ClInclude Include="Source\MaterialDataFormatTests.h" />
-    <ClInclude Include="Source\MemoryStreamTests.h" />
-    <ClInclude Include="Source\DataValueTests.h" />
-    <ClInclude Include="Source\FrustumTests.h" />
-    <ClInclude Include="Source\DataValueJsonFormatTests.h" />
-    <ClInclude Include="Source\Matrix4Tests.h" />
-    <ClInclude Include="Source\MeshWriterTests.h" />
-    <ClInclude Include="Source\MeshDataFormatTests.h" />
-    <ClInclude Include="Source\MeshTests.h" />
-    <ClInclude Include="Source\NetworkTests.h" />
-    <ClInclude Include="Source\PathTests.h" />
-    <ClInclude Include="Source\PlaneTests.h" />
-    <ClInclude Include="Source\QuaternionTests.h" />
-    <ClInclude Include="Source\EventTests.h" />
-    <ClInclude Include="Source\TaskPoolTests.h" />
-    <ClInclude Include="Source\TimeSpanTests.h" />
-    <ClInclude Include="Source\FormatTests.h" />
-    <ClInclude Include="Source\Vector2Tests.h" />
-    <ClInclude Include="Source\Vector3Tests.h" />
-    <ClInclude Include="Source\Vector4Tests.h" />
-    <ClInclude Include="Source\VertexAttributeTests.h" />
-    <ClInclude Include="Source\VertexLayoutTests.h" />
+    <ClCompile Include="Source\CubesSample.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
