Basic sample set up.  Improved AssetHandle API.

--- a/Hect/Hect.vcxproj
+++ b/Hect/Hect.vcxproj
@@ -45,6 +45,7 @@
     <ClCompile Include="Source\Entity\EntitySerializer.cpp" />
     <ClCompile Include="Source\Entity\System.cpp" />
     <ClCompile Include="Source\Entity\Scene.cpp" />
+    <ClCompile Include="Source\Entity\Systems\BasicRenderSystem.cpp" />
     <ClCompile Include="Source\Entity\Systems\CameraSystem.cpp" />
     <ClCompile Include="Source\Entity\Systems\PhysicsSystem.cpp" />
     <ClCompile Include="Source\Graphics\FrameBuffer.cpp" />
@@ -139,6 +140,7 @@
     <ClInclude Include="Source\Entity\System.h" />
     <ClInclude Include="Source\Entity\Scene.h" />
     <ClInclude Include="Source\Entity\Systems\CameraSystem.h" />
+    <ClInclude Include="Source\Entity\Systems\BasicRenderSystem.h" />
     <ClInclude Include="Source\Entity\Systems\PhysicsSystem.h" />
     <ClInclude Include="Source\Graphics\FrameBuffer.h" />
     <ClInclude Include="Source\Graphics\MeshBinaryFormat.h" />
