--- a/Hect/Samples/Common/Common.vcxproj.filters
+++ b/Hect/Samples/Common/Common.vcxproj.filters
@@ -8,12 +8,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Source\Sample.h">
-      <Filter>Source</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="Source\Sample.cpp">
+    <ClCompile Include="Source\Main.cpp">
       <Filter>Source</Filter>
     </ClCompile>
   </ItemGroup>
